# cdk-ffi

./: Cargo.toml  README.md
go_dir/: go.mod  lib.go  main.go  types.go  types_test.go
go_dir/cdk_ffi/: cdk_ffi.go  cdk_ffi.h
src/: lib.rs
