[package]
name = "cdk-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "cdk_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"

[dependencies]
cdk = { version = "0.10.1", features = ["wallet"] }
cdk-sqlite = { version = "0.10.1", features = ["wallet"] }
cashu = { version = "0.10.1" }
cdk-common = { version = "0.10.1", features = ["wallet"] }
uniffi = { version = "=0.28.3", features = ["cli"] }
uniffi_bindgen = { version = "=0.28.3" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
serde = "1"
serde_json = "1"
url = "2"
futures = "0.3"
anyhow = "1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
uniffi = { version = "=0.28.3", features = ["bindgen-tests"] }
rand = "0.8" 